@@ -255,6 +255,8 @@ The following options are supported:
 
 =item * mode
 
+=item * on_change
+
 =back
 
 With Rex-0.45 and newer, please use the L<file|Rex::Commands::File#file> resource instead.
@@ -286,6 +288,8 @@ sub mkdir {
   $dir = resolv_path($dir);
 
   my $options = {@_};
+
+  $options->{on_change} //= sub { };
 
   Rex::get_current_connection()->{reporter}
     ->report_resource_start( type => "mkdir", name => $dir );
@@ -386,6 +390,9 @@ sub mkdir {
 
   if ( $changed == 0 ) {
     Rex::get_current_connection()->{reporter}->report( changed => 0, );
+  }
+  else {
+    $options->{on_change}->($dir);
   }
 
   Rex::get_current_connection()->{reporter}
