@@ -15,6 +15,7 @@ Revision history for Rex
  - Clarify mkdir usage
 
  [ENHANCEMENTS]
+ - Add on_change option for mkdir
 
  [MAJOR]
 
